Solve edge cases and add styling
Made sure that the users cannot make a screen overflow by multiplication
or addition. Added a division logic to handle division by 0, and to
round the division result to 12 symbols on-screen max, again to stop
the screen from overflowing.

The calculator's logic works for '12 + 7 - 1 =' situations.

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ h1 {
   flex-direction: column;
   gap: 30px;
   border-radius: 4px;
+  box-shadow: 10px 10px 5px black;
 }
 
 #calculator-screen {
@@ -57,6 +58,7 @@ h1 {
   height: 50px;
   font-weight: bold;
   font-size: 20px;
+  transition-duration: 0.2s;
 }
 
 .calculator-buttons button:hover {
@@ -65,4 +67,8 @@ h1 {
 
 #clear-button {
   width: 90%;
+}
+
+#execute {
+  width: 46%;
 }
